--- a/index.html
+++ b/index.html
@@ -30,9 +30,13 @@
         <div class="grid grid-cols-4 gap-6 w-full px-4">
             
             <!-- 微信图标（右移240px） -->
-            <div class="flex flex-col items-center gap-1"
-                 onclick="openChat()"
-                 style="transform: translateX(240px);">
+           <div class="col-span-4 flex justify-end">
+    <div class="flex flex-col items-center gap-1"
+         onclick="openChat()">
+        <div class="app-icon text-green-500 text-3xl">💬</div>
+        <span class="text-xs text-gray-600">微信</span>
+    </div>
+</div>
                 <div class="app-icon text-green-500 text-3xl">💬</div>
                 <span class="text-xs text-gray-600">微信</span>
             </div>
