--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         
         <!-- 新顶部小组件 -->
         <div class="widget-card mb-12 mt-4">
-            <div class="flex justify-between items-start">
+            <div class="flex items-start gap-10">
                 
                 <div class="flex flex-col items-center gap-1">
                     <span class="widget-emoji" onclick="editEmoji('left')">(⸝⸝๑  ̫ ๑⸝⸝)</span>
