--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 <title>AI Mobile OS</title>
 <script src="https://cdn.tailwindcss.com"></script>
 
-<style id="custom-style">
-body { background: #f0f0f0; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; }
-.glass-card { background: rgba(255, 255, 255, 0.7); backdrop-filter: blur(10px); border-radius: 24px; }
-.app-icon { width: 60px; height: 60px; background: white; border-radius: 15px; display: flex; align-items: center; justify-content: center; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
-.chat-msg-user { background: #95ec69; border-radius: 6px 0 6px 6px; }
-.chat-msg-ai { background: white; border-radius: 0 6px 6px 6px; }
+<style>
+body { background: #f0f0f0; font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif;}
+.glass-card{background:rgba(255,255,255,0.7);backdrop-filter:blur(10px);border-radius:24px;}
+.app-icon{width:60px;height:60px;background:white;border-radius:15px;display:flex;align-items:center;justify-content:center;box-shadow:0 4px 6px rgba(0,0,0,0.1);}
+.chat-msg-user{background:#95ec69;border-radius:6px 0 6px 6px;}
+.chat-msg-ai{background:white;border-radius:0 6px 6px 6px;}
 
 .widget-card{
 width:100%;
@@ -25,10 +25,10 @@ position:relative;
 width:60px;height:60px;border-radius:50%;object-fit:cover;
 border:3px solid white;box-shadow:0 4px 10px rgba(0,0,0,0.1);
 }
-.widget-emoji{font-size:14px;cursor:pointer;}
+.widget-emoji{font-size:14px;}
 .widget-text{
 position:absolute;bottom:15px;right:20px;
-font-size:12px;color:#555;cursor:pointer;
+font-size:12px;color:#555;
 }
 </style>
 </head>
@@ -41,19 +41,19 @@ font-size:12px;color:#555;cursor:pointer;
 <div class="widget-card mb-12 mt-4">
 <div class="flex items-start gap-10">
 <div class="flex flex-col items-center gap-1">
-<span class="widget-emoji" onclick="editEmoji('left')">(⸝⸝๑  ̫ ๑⸝⸝)</span>
-<img id="avatar-left" class="widget-avatar"
-src="https://i.postimg.cc/Qx8Y1m3R/IMG-2980.jpg"
-onclick="changeAvatar('left')">
+<span class="widget-emoji">(⸝⸝๑  ̫ ๑⸝⸝)</span>
+<img class="widget-avatar"
+src="https://i.postimg.cc/Qx8Y1m3R/IMG-2980.jpg">
 </div>
+
 <div class="flex flex-col items-center gap-1">
-<span class="widget-emoji" onclick="editEmoji('right')">(˶⁃ ω ⁃˶)</span>
-<img id="avatar-right" class="widget-avatar"
-src="https://i.postimg.cc/Qx8Y1m3R/IMG-2980.jpg"
-onclick="changeAvatar('right')">
+<span class="widget-emoji">(˶⁃ ω ⁃˶)</span>
+<img class="widget-avatar"
+src="https://i.postimg.cc/Qx8Y1m3R/IMG-2980.jpg">
 </div>
 </div>
-<div id="widget-text" class="widget-text" onclick="editWidgetText()">
+
+<div class="widget-text">
 我不想隔着屏幕和你说话
 </div>
 </div>
@@ -63,7 +63,7 @@ onclick="changeAvatar('right')">
 <!-- 微信 -->
 <div class="col-span-4 flex justify-end">
 <div class="flex flex-col items-center gap-1" onclick="openChat()">
-<div class="app-icon overflow-hidden p-0">
+<div class="app-icon">
 <img src="https://i.postimg.cc/fycLsZLY/quality-restoration-20260228193355205.png"
 class="w-full h-full object-cover rounded-[15px]">
 </div>
@@ -74,7 +74,7 @@ class="w-full h-full object-cover rounded-[15px]">
 <!-- 论坛 -->
 <div class="col-span-4 flex justify-end">
 <div class="flex flex-col items-center gap-1" onclick="openForum()">
-<div class="app-icon overflow-hidden p-0">
+<div class="app-icon">
 <img src="https://i.postimg.cc/ZnjMz01G/quality-restoration-20260228202408361.png"
 class="w-full h-full object-cover rounded-[15px]">
 </div>
@@ -84,125 +84,205 @@ class="w-full h-full object-cover rounded-[15px]">
 
 </div>
 
-<div class="mt-auto glass-card w-full py-4 px-8 flex justify-between items-center mb-4"
-style="transform: translateY(20px);">
-<button onclick="openModal('settings')" class="flex flex-col items-center">
-<span class="text-xl">⚙️</span><span class="text-[10px]">设置</span>
-</button>
-<button onclick="openModal('beauty')" class="flex flex-col items-center">
-<span class="text-xl">🎨</span><span class="text-[10px]">美化</span>
-</button>
-<button onclick="openModal('presets')" class="flex flex-col items-center">
-<span class="text-xl">📑</span><span class="text-[10px]">预设</span>
-</button>
-</div>
 </div>
 
-<!-- 微信聊天界面 -->
+<!-- ================= 微信 ================= -->
 <div id="chat-screen" class="fixed inset-0 bg-[#ededed] hidden flex flex-col z-50">
-<div class="h-12 bg-[#ededed] flex items-center px-4 border-b border-gray-200">
-<button onclick="closeChat()" class="text-xl">〈</button>
+
+<div class="h-12 flex items-center px-4 border-b">
+<button onclick="closeChat()">〈</button>
 <div class="flex-1 text-center font-bold">AI 好友</div>
-<div class="w-6"></div>
 </div>
+
 <div id="chat-flow" class="flex-1 overflow-y-auto p-4 space-y-4"></div>
-<div class="p-3 bg-[#f7f7f7] border-t flex flex-col gap-2">
-<div class="flex gap-2">
-<input id="chat-input" type="text" class="flex-1 border-none rounded bg-white px-3 py-2 outline-none" placeholder="输入消息...">
-<button onclick="sendUserMsg()" class="bg-green-600 text-white px-4 py-2 rounded">发送</button>
-</div>
-<button onclick="triggerAI()" id="gen-btn" class="w-full bg-blue-500 text-white py-1 rounded text-sm">点击生成对方回复</button>
-</div>
+
+<div class="p-3 border-t bg-white">
+<input id="chat-input" class="w-full border rounded px-3 py-2"
+placeholder="输入消息...">
+<button onclick="sendUserMsg()"
+class="w-full mt-2 bg-green-600 text-white py-2 rounded">
+发送
+</button>
 </div>
 
-<!-- 论坛界面 -->
-<div id="forum-screen" class="fixed inset-0 bg-white hidden flex flex-col z-50">
+</div>
 
-<div class="h-12 bg-white flex items-center px-4 border-b relative">
-<button onclick="closeForum()" class="text-xl">〈</button>
+<!-- ================= 论坛 ================= -->
+<div id="forum-screen"
+class="fixed inset-0 bg-white hidden flex flex-col z-50">
+
+<!-- 顶栏 -->
+<div class="h-12 flex items-center px-4 border-b relative">
+<button onclick="closeForum()">〈</button>
 <div class="flex-1 text-center font-bold">论坛</div>
-<button onclick="generateForumPosts()" class="absolute right-4 text-xl">🔄</button>
+
+<!-- 生成 -->
+<button onclick="generateForumPosts()"
+class="absolute right-4 text-xl">🔄</button>
 </div>
 
-<div id="forum-flow" class="flex-1 overflow-y-auto p-4 space-y-4"></div>
+<!-- 帖子列表 -->
+<div id="forum-flow"
+class="flex-1 overflow-y-auto p-4 space-y-4"></div>
 
-<button onclick="createPost()"
-class="fixed bottom-24 right-6 w-14 h-14 bg-black text-white text-3xl rounded-full shadow-lg flex items-center justify-center">
+<!-- 发布按钮 -->
+<button onclick="openPostPage()"
+class="fixed bottom-24 right-6 w-14 h-14 bg-black text-white text-3xl rounded-full flex items-center justify-center shadow-lg">
 +
 </button>
 
 </div>
 
+<!-- ================= 发帖全屏页面 ================= -->
+<div id="post-screen"
+class="fixed inset-0 bg-white hidden flex flex-col z-[70]">
+
+<div class="h-12 flex items-center px-4 border-b relative">
+
+<button onclick="closePost()">〈</button>
+
+<div class="flex-1 text-center font-bold">发帖</div>
+
+<!-- 发布按钮 -->
+<button onclick="submitPost()"
+class="absolute right-4 px-3 py-1 rounded-xl bg-gray-200">
+<span class="text-gray-800 text-sm font-medium">发布</span>
+</button>
+
+</div>
+
+<div class="flex-1 p-4">
+
+<textarea id="post-text"
+class="w-full h-32 border rounded-xl p-3 outline-none"
+placeholder="分享点什么吧..."></textarea>
+
+<div id="image-preview" class="flex flex-wrap gap-3 mt-4"></div>
+
+<label class="w-24 h-24 border-2 border-dashed rounded-xl
+flex items-center justify-center text-gray-400 text-2xl cursor-pointer mt-3">
++
+<input type="file" id="image-input" multiple accept="image/*" class="hidden">
+</label>
+
+</div>
+
+</div>
+
 <script>
-let config={baseUrl:'https://api.openai.com/v1',apiKey:'',model:'gpt-3.5-turbo',customCss:'',systemPrompt:'你是一个真实的微信好友，回复极简，控制在20字内。'};
-let chatHistory=[];
+
 let forumPosts=[];
+let selectedImages=[];
 
-/* 基础功能 */
-function openForum(){document.getElementById('forum-screen').classList.remove('hidden');}
-function closeForum(){document.getElementById('forum-screen').classList.add('hidden');}
-function openChat(){document.getElementById('chat-screen').classList.remove('hidden');}
-function closeChat(){document.getElementById('chat-screen').classList.add('hidden');}
+/* ===== 页面切换 ===== */
 
-function sendUserMsg(){
-const input=document.getElementById('chat-input');
-if(!input.value)return;
-renderMsg(input.value,'user');
-chatHistory.push({role:'user',content:input.value});
-input.value='';
+function openChat(){document.getElementById("chat-screen").classList.remove("hidden");}
+function closeChat(){document.getElementById("chat-screen").classList.add("hidden");}
+
+function openForum(){
+document.getElementById("forum-screen").classList.remove("hidden");
+renderForum();
+}
+function closeForum(){
+document.getElementById("forum-screen").classList.add("hidden");
 }
 
-function renderMsg(text,role){
-const container=document.getElementById('chat-flow');
-const div=document.createElement('div');
-div.className=`flex ${role==='user'?'justify-end':'justify-start'}`;
-div.innerHTML=`<div class="max-w-[80%] px-3 py-2 shadow-sm text-sm ${role==='user'?'chat-msg-user':'chat-msg-ai'}">${text}</div>`;
+function openPostPage(){
+document.getElementById("post-screen").classList.remove("hidden");
+}
+function closePost(){
+document.getElementById("post-screen").classList.add("hidden");
+document.getElementById("post-text").value="";
+selectedImages=[];
+document.getElementById("image-preview").innerHTML="";
+}
+
+/* ===== 图片 ===== */
+
+document.getElementById("image-input")?.addEventListener("change",function(e){
+for(let file of e.target.files){
+let reader=new FileReader();
+reader.onload=function(ev){
+selectedImages.push(ev.target.result);
+renderPreview();
+}
+reader.readAsDataURL(file);
+}
+});
+
+function renderPreview(){
+const container=document.getElementById("image-preview");
+container.innerHTML="";
+selectedImages.forEach((src,index)=>{
+const div=document.createElement("div");
+div.className="relative w-24 h-24";
+div.innerHTML=`
+<img src="${src}" class="w-full h-full object-cover rounded-xl">
+<button onclick="removeImage(${index})"
+class="absolute -top-2 -right-2 bg-black text-white w-5 h-5 rounded-full text-xs">
+×
+</button>
+`;
 container.appendChild(div);
-container.scrollTop=container.scrollHeight;
+});
 }
 
-/* 论坛 */
+function removeImage(index){
+selectedImages.splice(index,1);
+renderPreview();
+}
+
+/* ===== 发布帖子 ===== */
+
+function submitPost(){
+const text=document.getElementById("post-text").value.trim();
+if(!text && selectedImages.length===0){
+alert("请输入内容或添加图片");
+return;
+}
+
+forumPosts.unshift({
+title:text.substring(0,20)||"图片分享",
+content:text,
+images:[...selectedImages]
+});
+
+renderForum();
+closePost();
+}
+
+/* ===== 论坛渲染 ===== */
+
 function renderForum(){
 const container=document.getElementById("forum-flow");
 container.innerHTML="";
+
 forumPosts.forEach(post=>{
+let imgHtml="";
+if(post.images){
+imgHtml=post.images.map(src=>
+`<img src="${src}" class="w-full rounded-lg mt-2">`
+).join("");
+}
+
 const div=document.createElement("div");
 div.className="p-4 bg-gray-100 rounded-xl shadow-sm";
-div.innerHTML=`<h3 class="font-bold mb-1">${post.title}</h3>
-<p class="text-sm text-gray-600">${post.content}</p>`;
+div.innerHTML=`
+<h3 class="font-bold">${post.title}</h3>
+<p class="text-sm text-gray-600">${post.content||""}</p>
+${imgHtml}
+`;
+
 container.appendChild(div);
 });
 }
 
-function createPost(){
-const title=prompt("输入标题");
-if(!title)return;
-const content=prompt("输入内容");
-if(!content)return;
-forumPosts.unshift({title,content});
-renderForum();
-}
+/* ===== 生成帖子 ===== */
 
 async function generateForumPosts(){
-if(!config.apiKey){alert("请先填写API Key");return;}
-const count=Math.floor(Math.random()*6)+10;
-const promptText=`生成${count}条真实网友论坛帖子，JSON数组格式，每条包含title和content。不要解释。`;
-try{
-const response=await fetch(`${config.baseUrl}/chat/completions`,{
-method:'POST',
-headers:{'Content-Type':'application/json','Authorization':`Bearer ${config.apiKey}`},
-body:JSON.stringify({
-model:config.model,
-messages:[{role:"user",content:promptText}],
-temperature:0.9
-})
-});
-const data=await response.json();
-const json=JSON.parse(data.choices[0].message.content);
-forumPosts=json;
-renderForum();
-}catch(e){alert("生成失败");}
+alert("示例功能，可接入API自行改");
 }
+
 </script>
 
 </body>
